# build-mcp

./: .env  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
src/build_agent/: README.md  agent.py  build_tools.py  llm_chat.py  select_model_agent.py
src/build_mcp/: __init__.py  __main__.py  config.yaml
src/build_mcp/common/: config.py  logger.py
src/build_mcp/services/: gd_sdk.py  server.py
tests/common/: test_config.py
tests/services/: test_gd_sdk.py  test_mcp_client.py
